# uhip-unified-hybrid-intelligence

./: .env.example  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_README.md  Dockerfile  EXECUTION-ROADMAP-2026-W1.md  GAP-FIXES.md  IMPLEMENTATION_SUMMARY.md  PARALLEL-EXECUTION-ORCHESTRATOR.sh  PARALLEL-TRACKS.md  PHASE-2-EXECUTION-ROADMAP.md  PROJECT_ROADMAP_PARALLEL_TRACKS.md  README.md  ROADMAP.md  SESSION-SUMMARY-JAN-3-2026.md  config.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  verify_system.sh
.github/workflows/: ci.yml
core/: __init__.py
core/models/: __init__.py  test_turbine_rul_model.py  turbine_rul_model.py
docs/: index.md
docs/about/: changelog.md  license.md
docs/api/: config.md  engine.md  optimizer.md  processor.md  utils.md
docs/development/: architecture.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: advanced-features.md  basic-usage.md  examples.md
templates/: ministry_email.html  steering_committee_agenda.md
tests/: __init__.py  test_config.py  test_engine.py  test_optimizer.py  test_processor.py  test_utils.py
uhip/: __init__.py  main.py
uhip/config/: __init__.py  settings.py
uhip/core/: __init__.py  engine.py  optimizer.py  processor.py
uhip/utils/: __init__.py  helpers.py  metrics.py
