[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uhip"
version = "1.0.0"
description = "Unified Hybrid Intelligence Platform - Production-Ready System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UHIP Development Team", email = "dev@uhip.io"}
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "quantum",
    "blockchain",
    "edge-computing",
    "hybrid-intelligence",
    "parallel-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/romanchaa997/uhip-unified-hybrid-intelligence"
Documentation = "https://romanchaa997.github.io/uhip-unified-hybrid-intelligence/"
Repository = "https://github.com/romanchaa997/uhip-unified-hybrid-intelligence"
Issues = "https://github.com/romanchaa997/uhip-unified-hybrid-intelligence/issues"

[project.scripts]
uhip = "uhip.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
